fixing CLI topology
